// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with custom props 1`] = `
<div>
  <categories-list-stub
    categories="[object Object],[object Object],[object Object]"
    limit="2"
  />
</div>
`;

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with custom props without access to categories 1`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list v-list--dense theme--dark"
    role="list"
  >
    <categories-list-stub
      categories=""
    />
  </div>
</div>
`;

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with custom props without access to categories 2`] = `
<div>
  <div
    class="v-menu v-menu--inline"
  >
    <div
      class="v-menu__activator"
    >
      <button
        class="v-btn v-btn--depressed v-btn--small theme--light"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Links
        </div>
      </button>
    </div>
    <transition-stub
      name="v-menu-transition"
    />
  </div>
</div>
`;

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with default props 1`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-list v-list--dense theme--dark"
    role="list"
  >
    <categories-list-stub
      categories=""
    />
  </div>
</div>
`;

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with default props 2`] = `
<div>
  <div
    class="v-menu v-menu--inline"
  >
    <div
      class="v-menu__activator v-menu__activator--disabled"
    >
      <button
        class="v-btn v-btn--disabled v-btn--depressed v-btn--small theme--light"
        disabled="disabled"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          Links
        </div>
      </button>
    </div>
    <transition-stub
      name="v-menu-transition"
    />
  </div>
</div>
`;
